@@ -135,6 +135,39 @@ class lastfmApiEvent extends lastfmApiBase {
 		}
 	}
 	
+	public function getShouts($methodVars) {
+		// Check for required variables
+		if ( !empty($methodVars['eventId']) ) {
+			$vars = array(
+				'method' => 'event.getshouts',
+				'api_key' => $this->auth->apiKey,
+				'event' => $methodVars['eventId']
+			);
+			
+			if ( $call = $this->apiGetCall($vars) ) {
+				$this->shouts['id'] = (string) $call->shouts['event'];
+				$this->shouts['total'] = (string) $call->shouts['total'];
+				$i = 0;
+				foreach ( $call->shouts->shout as $shout ) {
+					$this->shouts['shouts'][$i]['body'] = (string) $shout->body;
+					$this->shouts['shouts'][$i]['author'] = (string) $shout->author;
+					$this->shouts['shouts'][$i]['date'] = strtotime((string) $shout->date);
+					$i++;
+				}
+				
+				return $this->shouts;
+			}
+			else {
+				return FALSE;
+			}
+		}
+		else {
+			// Give a 91 error if incorrect variables are used
+			$this->handleError(91, 'You must include eventId and status varialbes in the call for this method');
+			return FALSE;
+		}
+	}
+	
 	public function share($methodVars) {
 		// Only allow full authed calls
 		if ( $this->fullAuth == TRUE ) {
